Deployment from Statiq

--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -399,6 +399,11 @@
 <li>[Fix][Android][UWP] Allow multiple beacon regions to be ranged at once</li>
 <li>[Enhancement][Android][UWP] Non-standard iBeacons are now supported</li>
 </ul>
+<h3 id="sensors">Sensors</h3>
+<ul>
+<li>[BREAKING] Heart rate sensor has been removed - too many people were having issues with linker and iOS &quot;health&quot; permission request</li>
+<li>[Enhancement][Android] Compass accuracy is now implemented</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
