Deployment from Statiq

--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -385,6 +385,7 @@
 <li>[BREAKING] IBleManager.WhenAccessStatusChanged &amp; IBleManager.Status removed - RequestAccess is a one stop shop</li>
 <li>[Fix][Android] IBleManager.WhenStateChanged now responds properly on Android 10+</li>
 <li>[Fix][Android] Pairing response now responds properly to accept and cancel of a request</li>
+<li>[Fix] Device Info extension method was not returning properly</li>
 </ul>
 <h3 id="locations">Locations</h3>
 <ul>
