--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -398,6 +398,7 @@
 <ul>
 <li>[BREAKING][Android] BeaconMonitorConfig is now a required parameter and requires you set the ScanServiceUuids property to allow for proper background scanning. Check your beacon provider for what this value should be.</li>
 <li>[Fix][Android][UWP] Allow multiple beacon regions to be ranged at once</li>
+<li>[Fix][Android][UWP] Allow additional beacon packet sizes</li>
 <li>[Enhancement][Android][UWP] Non-standard iBeacons are now supported</li>
 </ul>
 <h3 id="sensors">Sensors</h3>
